--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body::before {
     position: fixed;
     top: 0; left: 0; width: 100%; height: 100%;
     z-index: -2;
-    background: url('../assets/banner_ojos.JPG') no-repeat center center/cover;    
+    background: url('../assets/banner_ojos.jpg') no-repeat center center/cover;    
     filter: blur(20px) brightness(0.4); 
     transform: scale(1.1);
 }
@@ -640,4 +640,5 @@ footer {
     0% { transform: scale(1); }
     50% { transform: scale(1.5); }
     100% { transform: scale(1); }
+
 }
